# semantic-image-search

./: README.md  build-vcpkg-heif.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.zed/: tasks.json
src/: App.vue  events.ts  i18n.ts  indexing.ts  main.ts  store.ts  styles.css  toast.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/01-init/: up.sql
src-tauri/migrations/02-multiple-dirs/: up.sql
src-tauri/src/: app.rs  db.rs  dylib.rs  errors.rs  frontend.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs  utils.rs
src-tauri/src/commands/: index.rs  indexing.rs  mod.rs  search.rs  state.rs  status.rs  thumbnail.rs
src-tauri/src/models/: common.rs  errors.rs  metaclip2.rs  mod.rs  video.rs
src/assets/: main.css
src/assets/fonts/Inter/: inter.css
src/components/: AppSidebar.vue  CustomToast.vue  DirectoryList.vue  NumberInput.vue  ResultCard.vue  ResultsPanel.vue  RichProgressBar.vue  ScrollFadeContainer.vue  TitleBar.vue
src/components/icons/: AddFolderIcon.vue  DeleteIcon.vue  DownIcon.vue  GenerateIcon.vue  ImageIcon.vue  PauseIcon.vue  PlayIcon.vue  RefreshIcon.vue  RemoveFromLibraryIcon.vue  SearchIcon.vue  StopIcon.vue  UpIcon.vue  index.ts
src/components/icons/titlebar/: WIndowClose.vue  WindowMaximize.vue  WindowMinimize.vue  WindowRestore.vue
src/components/icons/toast/: CloseIcon.vue  CopyIcon.vue
src/components/modals/: BaseModal.vue  ConfirmRemoveFolderModal.vue  InfoModal.vue  ModalsContainer.vue  index.ts
src/composables/: useModal.ts
src/locales/: en.json
