[package]
name = "semantic-search"
version = "0.5.0-alpha"
description = "A Tauri App"
authors = ["Artezon"]
edition = "2024"

[lib]
name = "semantic_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
rusqlite_migration = { version = "2.5", features = ["from-directory"] }
include_dir = "0.7"
anyhow = "1"
image = "0.25"
fast_image_resize = { version = "6", features = ["image"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
rayon = "1"
tokenizers = "0.23"
walkdir = "2"
zerocopy = "0.8"
indoc = "2"
libloading = "0.9"
sys-locale = "0.3"
libheif-rs = { version = "2.7", features = ["image", "embedded-libheif"], optional = true }
ffmpeg-sidecar = { version = "2.5", default-features = false, optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[features]
default = ["portable", "cuda", "video", "heif"]
portable = []
cuda = ["ort/cuda"]
video = ["ffmpeg-sidecar"]
heif = ["libheif-rs"]

[profile.release-opt]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
